--- a/reactnative-project/app.json
+++ b/reactnative-project/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "reactnative-project",
-    "slug": "reactnative-project",
+    "name": "newProject",
+    "slug": "newProject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/whiteLogo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2dd27b"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -24,7 +24,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/logo.png"
     }
   }
 }
