--- a/reactnative-project/package.json
+++ b/reactnative-project/package.json
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "expo": "~48.0.9",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "firebase": "^9.19.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.6.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
