--- a/reactnative-project/package.json
+++ b/reactnative-project/package.json
@@ -14,9 +14,13 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
+    "base-64": "^1.0.0",
+    "body-parser": "^1.20.2",
     "expo": "~48.0.9",
     "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
