--- a/reactnative-project/package.json
+++ b/reactnative-project/package.json
@@ -19,6 +19,8 @@
     "body-parser": "^1.20.2",
     "expo": "~48.0.9",
     "expo-app-loading": "^2.1.1",
+    "expo-camera": "^13.2.1",
+    "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "firebase": "^9.19.1",
